# wasm-instrumentation

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  corner_case.md  cspell.json  main.cpp  package.json
.github/actions/build-JS-variant/: action.yml
.github/workflows/: cmake.yml  publish.yml  reusable-buildJSVariant.yml
cspell/: CodeSpellCheck.md  project-words.txt
docs/: build.md
src/: BasicBlockAnalysis.cpp  BasicBlockAnalysis.hpp  BasicBlockWalker.cpp  BasicBlockWalker.hpp  CovInstrumentationWalker.cpp  CovInstrumentationWalker.hpp  CoverageInstru.cpp  CoverageInstru.hpp  InstrumentResponse.hpp  MockInstrumentationWalker.cpp  MockInstrumentationWalker.hpp
test/: CMakeLists.txt  TestUtil.hpp  check.py  e2e.cpp  fuzz.cpp  lit.cpp
test/fuzz/: assemblyscript.debug.wasm  assemblyscript.debug.wasm.map
test/lit/: run.cjs
test/lit/covInstrument/: do_while.wast  do_while_break.wast  do_while_continue.wast  do_while_continue.wast.debug.json  do_while_once.wast  for_loop_break.wast  for_loop_break.wast.debug.json  for_loop_continue.wast  for_loop_continue.wast.debug.json  for_loop_return.wast.debug.json  if_else.wast.debug.json  if_elseif_else.wast  if_elseif_empty_else.wast.debug.json  if_empty_else.wast.debug.json  if_multi_condition.wast.debug.json  multi_func.wast.debug.json  switch_case.wast  switch_case.wast.debug.json  switch_case_fallthrough.wast  switch_case_fallthrough.wast.debug.json  switch_case_rdefault.wast  while.wast  while.wast.debug.json  while_break.wast  while_break.wast.debug.json  while_continue.wast.debug.json
test/lit/expectInstrument/: expect.test.expect.json  expect.test.wasm  expect.test.wasm.map
test/lit/fixture/: do_while.wat.debug.json  do_while_break.wat.debug.json  do_while_once.wat.debug.json  exit_basicBlock.wat.debug.json  for_loop.wat.debug.json  if_elseif_else.wat.debug.json  include_exclude.wat.debug.json  multi_if_else.wat.debug.json  switch_case_rdefault.wat.debug.json
test/lit/wat/: exit_basicBlock.wat  for_loop.wat  for_loop_return.wat  if_else.wat  if_elseif_empty_else.wat  if_empty_else.wat  if_multi_condition.wat  include_exclude.wat  multi_func.wat  multi_if_else.wat  while_continue.wat
test/test-asc/: asconfig.json  package.json  run.cjs
test/test-asc/assembly/: env.ts  index.ts
test/utils/: utils.cpp  utils.h
